# GP2

./: .gitignore  Makefile.am  README.md  _config.yml  configure.ac  contact.md  editors.md  editorsandvisualisers.md  genRule.c  gettingstarted.md  gp2.vim  graph.c  index.md  legacyvisualisers.md  morphism.c  publications.md
Compiler/: .gitignore  Makefile  Makefile.am  README  README.md  analysis.c  analysis.h  ast.c  ast.h  configure.ac  debug.c  debug.h  error.c  error.h  genCondition.c  genCondition.h  genHost.c  genHost.h  genLabel.c  genLabel.h  genMatch.c  genMatch.h  genProgram.c  genProgram.h  genRule.c  genRule.h  generate.c  generate.h  genmatch.c  genmatch.h  globals.h  gpLexer.lex  gplexer.lex  gpparser.y  graph.c  graph.h  graphStacks.c  graphStacks.h  hostParser.y  hostlexer.lex  (+36 more)
Compiler/Bash Files/: gp2c  gp2docker
Compiler/inc/: common.h  globals.h  gp2enums.h
Compiler/lib/: Makefile  Makefile.am  arrays.c  arrays.h  common.h  debug.c  debug.h  graph.c  graph.h  graphStacks.c  graphStacks.h  hostLexer.lex  hostParser.y  label.c  label.h  lexer.c  lexer.l  morphism.c  morphism.h  parser.c  parser.h  parser.y
Compiler/programs/: 2colouring.gp2  acyclicprog  eulercycleprog  hooverprog  rooted2colprog  rootedtriangleprog  seriesparprog  topsortprog  triangleprog  writerprog
Compiler/programs/graphs/: 2col-grid-10  2col-grid-2  cycle-4  cycle-5  cycle-5.host  cycle-6  serpar-10  shortpath-grid-3-2  sierpinski-gen3  sierpinski-gen4  sierpinski-gen4.host  sierpinski-gen5  sierpinski-gen5.host  tree-10  tree-100  writer-helloworld
Compiler/runtime/: Makefile  labelMatch.c  labelMatch.h  match.c  match.h  morphism.c  morphism.h
Compiler/src/: Makefile  Makefile.am  analysis.c  analysis.h  ast.c  ast.h  common.h  error.c  error.h  genCondition.c  genCondition.h  genLabel.c  genLabel.h  genProgram.c  genProgram.h  genRule.c  genRule.h  gpLexer.lex  gpParser.y  install-test.sh  lexer.c  lexer.l  lexer.lex  libheaders.h  main.c  parser.c  parser.h  parser.y  pretty.c  pretty.h  rule.c  rule.h  searchplan.c  searchplan.h  seman.c  seman.h  symbol.c  symbol.h  test.sh  transform.c  (+1 more)
Editors and Visualisers/Editor (Ivaylo Hristakiev and Alex Elliott)/: .gitignore  CMakeLists.txt  Doxyfile  GP2.pro  README.md
Editors and Visualisers/Editor (Ivaylo Hristakiev and Alex Elliott)/src/developer/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.hpp  aboutdialog.ui  codeeditor.cpp  codeeditor.hpp  conditioneditor.cpp  conditioneditor.hpp  conditionhighlighter.cpp  conditionhighlighter.hpp  conditiontokens.hpp  developer.pro  dotparser.cpp  dotparser.hpp  edge.cpp  edge.hpp  edit.cpp  edit.hpp  edit.ui  firstrundialog.cpp  firstrundialog.hpp  firstrundialog.ui  global.cpp  global.hpp  gpfile.cpp  gpfile.hpp  graph.cpp  graph.hpp  graphedit.cpp  graphedit.hpp  graphedit.ui  graphparser.cpp  graphparser.hpp  helpdialog.cpp  helpdialog.hpp  helpdialog.ui  icons.qrc  images.qrc  importgraphdialog.cpp  importgraphdialog.hpp  (+86 more)
Editors and Visualisers/Editor (Ivaylo Hristakiev and Alex Elliott)/src/developer/documentation/: developer_main.dox  namespace_developer.dox
Editors and Visualisers/Editor (Ivaylo Hristakiev and Alex Elliott)/src/developer/graphview/: edgeitem.cpp  edgeitem.hpp  editedgedialog.cpp  editedgedialog.hpp  editedgedialog.ui  editnodedialog.cpp  editnodedialog.hpp  editnodedialog.ui  graphitem.cpp  graphitem.hpp  graphscene.cpp  graphscene.hpp  graphwidget.cpp  graphwidget.hpp  nodeitem.cpp  nodeitem.hpp
Editors and Visualisers/Editor (Ivaylo Hristakiev and Alex Elliott)/src/developer/images/: icon.icns
Editors and Visualisers/Editor (Ivaylo Hristakiev and Alex Elliott)/src/developer/images/FatCow/16x16/: .directory
Editors and Visualisers/Editor (Ivaylo Hristakiev and Alex Elliott)/src/developer/preferences/: appearancepreferences.cpp  appearancepreferences.hpp  appearancepreferences.ui  preferencesdialog.cpp  preferencesdialog.hpp  preferencesdialog.ui  preferencespage.cpp  preferencespage.hpp  projectpreferences.cpp  projectpreferences.hpp  projectpreferences.ui  toolchainpreferences.cpp  toolchainpreferences.hpp  toolchainpreferences.ui
Editors and Visualisers/Editor (Ivaylo Hristakiev and Alex Elliott)/src/developer/stylesheets/: helpdialog.css  main.css  preferences.css  runconfiguration.css  tabwidget.css  welcome.css
Editors and Visualisers/Editor (Ivaylo Hristakiev and Alex Elliott)/src/developer/templates/: example_graph.host  example_graph_rhs.host  example_large_graph.gv  example_program.gp2  newgraph_alternative.host  newprogram.gp2  newproject.gpp  newrule_alternative.gpr
Editors and Visualisers/Editor (Ivaylo Hristakiev and Alex Elliott)/src/developer/tests/: CMakeLists.txt  testproject.cxx
Editors and Visualisers/Editor (Ivaylo Hristakiev and Alex Elliott)/src/developer/translate/: CMakeLists.txt  Makefile  ast.c  ast.h  error.h  globals.h  gplex.c  gplexer.lex  gpparser.y  parser.c  parser.h  pretty.c  pretty.h  prettyGraph.c  prettyGraph.h  translate.cpp  translate.hpp
Editors and Visualisers/Editor (Ivaylo Hristakiev and Alex Elliott)/src/documentation/: compiling.dox  doxygen.css  mainpage.dox
Editors and Visualisers/Editor (Ivaylo Hristakiev and Alex Elliott)/src/gpmake/: CMakeLists.txt  gpmake.pro  main.c
Editors and Visualisers/Editor (Ivaylo Hristakiev and Alex Elliott)/src/gpmake/documentation/: gpmake_main.dox
Editors and Visualisers/Editor (Ivaylo Hristakiev and Alex Elliott)/src/gprc/: CMakeLists.txt  gprc.pro
Editors and Visualisers/Editor (Ivaylo Hristakiev and Alex Elliott)/src/gprc/documentation/: gprc_main.dox
Editors and Visualisers/Editor (Ivaylo Hristakiev and Alex Elliott)/src/gpxc/: CMakeLists.txt  gpxc.pro
Editors and Visualisers/Editor (Ivaylo Hristakiev and Alex Elliott)/src/gpxc/documentation/: gpxc_main.dox
Editors and Visualisers/Editor (Ivaylo Hristakiev and Alex Elliott)/src/libgp/: CMakeLists.txt  errors.c  errors.h  global.c  global.h  libgp.pro
Editors and Visualisers/Editor (Ivaylo Hristakiev and Alex Elliott)/src/libgp/documentation/: libgp_main.dox
GraphAlgorithms/: 2col  2col.c  (+7 more)
(+471 files in other folders)
